Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11448

Crash when running "Switch to text diff editor"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.1.0-beta
    • Qt Creator 3.0.1
    • Editors
    • None
    • 7267c95acfd9364bf2eaaf175878670762373c7c

      To reproduce:
      1. Shrink your main window, so that the action "Switch to text diff editor" inside diff editor becames hidden and only available from expansion menu ">>"
      2. Click ">>" item and select "Switch to text diff editor" action - crash.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes