Fix a crash on "Switch to Text Diff Editor"

Task-number: QTCREATORBUG-11448

Change-Id: Id0239d5cf71ff857ac384e18136348df92a98b74
Reviewed-by: Eike Ziller <eike.ziller@digia.com>